# bridger-herman.github.io

./: .gitignore  Pipfile  README.md  about.html  adventures.html  build.sh  build_site.py  colors.gpl  cv.html  index.html  photos.html  project-cloth.html  project-particles.html  project-planning.html  project-sound-prop.html  projects.html  projects.html.orig  publications.html  robots.txt  tailwind.config.js  teaching.html
assets/boids/: boids.js  index.html
assets/css/: figure.css  header.css  index.css  tailwind-input.css  tailwind-output.css  tty.css
assets/fonts/FantasqueSansMono/: FantasqueSansMono-Bold-decl.css  FantasqueSansMono-BoldItalic-decl.css  FantasqueSansMono-Italic-decl.css  FantasqueSansMono-Regular-decl.css
assets/js/: index.js  loadWasm.js  pageLoader.js  splash.js  tools.js  tty.js  wordGallery.js
assets/pkg/: bridger_herman_github_io.js  bridger_herman_github_io_bg.wasm
deprecated/: Cargo.toml  build.sh
src/: lib.rs
templates/: about.jinja  adventures.jinja  base.jinja  cv.jinja  index.jinja  photography.jinja  projects.jinja  publications.jinja  research.jinja  teaching.jinja
