[package]
name = "bridger-herman-github-io"
version = "0.1.0"
authors = ["Bridger Herman"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.39"
wasm-logger = {git = "https://github.com/bridger-herman/wasm-logger.git"}
log = "0.4"
sl-rs = { git = "https://github.com/bridger-herman/sl-wasm.git" }
